apps/docs/v0.2.11/introduction.mdx
---
title: "Rigkit"
description: "Declarative dev environments, in TypeScript."
noindex: true
---

Rigkit runs development environments from a TypeScript config.

You write the setup once, Rigkit prepares it, and then you create as many named
workspaces as you need for agents, developers, CI jobs, or tests.

## Core loop

```sh
curl -fsSL https://www.rigkit.dev/install | sh
```

Create a project and bring up your first workspace:

```sh
rig init website --package-manager pnpm
cd website
rig plan --workflow dev
rig apply --workflow dev
rig create --workflow dev dev
rig run dev ssh
rig rm dev
```

- `rig plan` shows which setup tasks are cached or pending.
- `rig apply` runs pending tasks and stores their JSON `ctx`.
- `rig create --workflow <workflow> <name>` creates a workspace from the workflow output.
- `rig run <name> <operation>` runs an operation defined by `rigkit/index.ts`.

## Read next

- [Quickstart](/v0.2.11/guides/quickstart): install, initialize, apply, and create a workspace.
- [CLI reference](/v0.2.11/reference/cli): command syntax and global options.
- [Workflows](/v0.2.11/guides/workflows): tasks, context, composition, config, and caching.
- [Workspaces and operations](/v0.2.11/guides/workspaces): workspace lifecycle hooks and `rig run`.
- [Provider overview](/v0.2.11/providers/overview): built-in providers and provider design rules.

Runnable examples live in the
[Rigkit repository](https://github.com/freestyle-sh/rigkit/tree/main/examples).
